src/plugins/platforms/android/qandroidplatformscreen.h
@@ -93,6 +93,8 @@ public slots:
     void setPhysicalSize(const QSize &size);
     void setAvailableGeometry(const QRect &rect);
     void setSize(const QSize &size);
+    void setSizeParameters(const QSize &physicalSize, const QSize &size,
+                           const QRect &availableGeometry);
     void setRefreshRate(qreal refreshRate);
     void setOrientation(Qt::ScreenOrientation orientation);
 
